# AI-Weather-Agentic-Briefing-Tool

./: .env.example  .gitignore  MASTER_AGENT_OPERATING_MANUAL.md  Makefile  README.md  pyproject.toml
src/aviation_briefing/: __init__.py  briefing_engine.py  cli.py  config.py  models.py  taf_fetcher.py  taf_parser.py
src/aviation_briefing/prompts/: taf_briefing.md
tests/: test_briefing_engine.py  test_taf_parser.py
